docs(website): rename intro section and mention public static files

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -761,7 +761,7 @@ import CopyButton from "../components/CopyButton.astro";
           </p>
         </article>
       </div>
-      <p class="feature-more"><span class="feature-more-prefix">and </span><a class="feature-more-link" href="/docs#what-tako-can-do">more</a></p>
+      <p class="feature-more"><span class="feature-more-prefix">and </span><a class="feature-more-link" href="/docs#what-tako-does-well">more</a></p>
     </div>
 
     <div class="hero-block">
